--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,9 +11,9 @@
   <section>
  	<div>
     	<h1>미니스톱</h1>
-    	<p>일본에서 시작한 편의점 체인으로 국내 유일의 콤비네이션 스토어로 패스트푸드 전용 조리실과</br>
-    	점포 내 취식 공간을 운영하고 있다. 점포 내에서 치킨, 헴버거, 핫바, 아이스커피 등의 패스트푸드를 </br>
-    	직접 가공하여 판매함으로써 타 편의점과 차별화된 모습을 보이고 있다.</p>
+    	<p>일본에서 시작한 편의점 체인으로 국내 유일의 콤비네이션 스토어로 패스트푸드 전용</br> 
+    	조리실과 점포 내 취식 공간을 운영하고 있다. 점포 내에서 치킨, 헴버거, 핫바, </br>
+    	아이스커피 등의 패스트푸드를 직접 가공하여 판매함으로써 타 편의점과 차별화된 모습을 보이고 있다.</p>
     	<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Ministop_logo.jpg/200px-Ministop_logo.jpg">
     	
     </div>
