--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,11 +11,23 @@
   <section>
  	<div>
     	<h1>미니스톱</h1>
-    	<p>일본에서 시작한 편의점 체인으로 국내 유일의 콤비네이션 스토어로 패스트푸드 전용</br> 
-    	조리실과 점포 내 취식 공간을 운영하고 있다. 점포 내에서 치킨, 헴버거, 핫바, 아이스커피 
-    	등의 패스트푸드를 직접 가공하여 판매함으로써 타 편의점과 차별화된 모습을 보이고 있다.</p>
-    	<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Ministop_logo.jpg/200px-Ministop_logo.jpg">
+    	<p>국내 유일의 콤비네이션 스토어로 패스트푸드 전용 조리실과 점포 내 취식 공간을 운영하고 있다. 
+    	점포 내에서 치킨, 헴버거, 핫바, 아이스커피등의 패스트푸드를 직접 가공하여 판매함으로써 
+    	타 편의점과 차별화된 모습을 보이고 있다.</p>
+    	<p><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Ministop_logo.jpg/200px-Ministop_logo.jpg"></p>
     	
+    	<h1>★할인카드목록</h1>
+    	<p><img src="http://cfile3.uf.tistory.com/image/273EAF3750F515941643BF"></p>
+    	<p>SKT T멤버십 고객들은 5~15%할인혜택을 받을 수 있다.</p>
+    	</br>
+    	<h1>미니스톱 소프트콘</h1>
+    	<p><img src="http://postfiles15.naver.net/20150529_110/rulrul32_1432878647748hhaE7_JPEG/CYMERA_20150528_172318.jpg?type=w2"></p>
+    	<p>다가오는 무더위! 그런 당신을 위해 준비했다! 저렴한 가격의 미니스톱 소프트콘!</p>
+    	<p><img src="http://postfiles15.naver.net/20150529_94/rulrul32_1432878647829UsGfu_JPEG/CYMERA_20150529_145024.jpg?type=w2"></p>
+    	<p>소프트콘의 가격은 무려 1000원! 하지만 양은 혜자(푸짐)하다~~ 우와~~~ </p>
+    	<p><img src="http://img.phinf.pholar.net/20150515_171/1431655445091xO0mr_JPEG/577d92c0-faa6-11e4-989e-00000000613a_5282151045340785816.jpg?type=f630_630"></p>
+    	<p>아쉽게도 올해부터 초코맛이 사라지고 체리맛이 추가되었다. 
+    	바닐라/체리바닐라믹스/바닐라 이렇게 선택할 수 있으니 골라먹어봅시다!</p>
     </div>
     <h1>Heading One</h1>
     <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
