--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,9 @@
     	<p>SKT T멤버십 고객들은 5~15%할인혜택을 받을 수 있다.</p>
     	</br>
     	<h1>미니스톱 소프트콘</h1>
-    	<p><img src="http://postfiles15.naver.net/20150529_110/rulrul32_1432878647748hhaE7_JPEG/CYMERA_20150528_172318.jpg?type=w2"></p>
+    	<p><img src="http://img.phinf.pholar.net/20150510_69/1431183878938NsnS3_JPEG/3b43d1b0-bccf-11e4-874a-00000000613a_2426362889053927814.jpg?type=f630_840"></p>
     	<p>다가오는 무더위! 그런 당신을 위해 준비했다! 저렴한 가격의 미니스톱 소프트콘!</p>
-    	<p><img src="http://postfiles15.naver.net/20150529_94/rulrul32_1432878647829UsGfu_JPEG/CYMERA_20150529_145024.jpg?type=w2"></p>
+    	<p><img src="http://img.phinf.pholar.net/20150519_228/1432014689436rT51r_JPEG/899a7a70-d2ba-11e4-9afd-000000000905_5881719948486758469.jpg?type=f630_840"></p>
     	<p>소프트콘의 가격은 무려 1000원! 하지만 양은 혜자(푸짐)하다~~ 우와~~~ </p>
     	<p><img src="http://img.phinf.pholar.net/20150515_171/1431655445091xO0mr_JPEG/577d92c0-faa6-11e4-989e-00000000613a_5282151045340785816.jpg?type=f630_630"></p>
     	<p>아쉽게도 올해부터 초코맛이 사라지고 체리맛이 추가되었다. 
