--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,9 @@
     	<p><img src="http://img.phinf.pholar.net/20150515_171/1431655445091xO0mr_JPEG/577d92c0-faa6-11e4-989e-00000000613a_5282151045340785816.jpg?type=f630_630"></p>
     	<p>아쉽게도 올해부터 초코맛이 사라지고 체리맛이 추가되었다. 
     	바닐라/체리바닐라믹스/바닐라 이렇게 선택할 수 있으니 골라먹어봅시다!</p>
+    	<h1>미니스톱 스페셜 소불고기 도시락</h1>
+    	<p><img src="http://cfile2.uf.tistory.com/image/142AED4C502D8EAC1CB31B"></p>
+    	<p>출출하지만 주머니는 가벼울때는? 미니스톱 소불고기 도시락!</p>
     </div>
     <h1>Heading One</h1>
     <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
