--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,11 @@
     	점포 내에서 치킨, 헴버거, 핫바, 아이스커피등의 패스트푸드를 직접 가공하여 판매함으로써 
     	타 편의점과 차별화된 모습을 보이고 있다.</p>
     	<p><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Ministop_logo.jpg/200px-Ministop_logo.jpg"></p>
-    	<h1>★할인카드목록</h1>
+    	★할인카드목록
     	<p><img src="http://cfile3.uf.tistory.com/image/273EAF3750F515941643BF"></p>
     	<p>SKT T멤버십 고객들은 5~15%할인혜택을 받을 수 있다.</p>
     	</br>
-    	<h1>미니스톱 소프트콘</h1>
+    	<h2>미니스톱 소프트콘</h2>
     	<p><img src="http://img.phinf.pholar.net/20150510_69/1431183878938NsnS3_JPEG/3b43d1b0-bccf-11e4-874a-00000000613a_2426362889053927814.jpg?type=f630_840"></p>
     	<p>다가오는 무더위! 그런 당신을 위해 준비했다! 저렴한 가격의 미니스톱 소프트콘!</p>
     	<p><img src="http://img.phinf.pholar.net/20150519_228/1432014689436rT51r_JPEG/899a7a70-d2ba-11e4-9afd-000000000905_5881719948486758469.jpg?type=f630_840"></p>
@@ -27,9 +27,16 @@
     	<p><img src="http://img.phinf.pholar.net/20150515_171/1431655445091xO0mr_JPEG/577d92c0-faa6-11e4-989e-00000000613a_5282151045340785816.jpg?type=f630_630"></p>
     	<p>아쉽게도 올해부터 초코맛이 사라지고 체리맛이 추가되었다. 
     	바닐라/체리바닐라믹스/바닐라 이렇게 선택할 수 있으니 골라먹어봅시다!</p>
-    	<h1>미니스톱 스페셜 소불고기 도시락</h1>
+    	<h2>미니스톱 스페셜 소불고기 도시락</h2>
     	<p><img src="http://cfile2.uf.tistory.com/image/142AED4C502D8EAC1CB31B"></p>
     	<p>출출하지만 주머니는 가벼울때는? 미니스톱 소불고기 도시락!</p>
+    	<p><img src="http://cfile10.uf.tistory.com/image/1152344F502D93E804A855"></p>
+    	<p>이름 값을 하듯이 소불고기는 물론이고 고구마크로켓, 탕수육 스팸김치 등등 다양한 반찬들이 있다. 
+    	맛과 질은 평균적인 편의점 도시락과 비슷하다.우왕ㅋ굳ㅋ</p>
+    	<p><img src="http://cfile23.uf.tistory.com/image/126E884D502D8B0526255C"></p>
+    	<p>미니스톱은 GS25나 CU에 비해 점포수가 적어 도시락또한 접하기 어려워서 선택하기 망설여졌지만
+    	제법 좋은 선택이었던 것 같다. 미니스톱에서 치킨만 먹지말고 도시락도 먹어보는건 어떨까요!?</p>
+    	
     </div>
     <h1>Heading One</h1>
     <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
