--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,6 +36,13 @@
     	<p><img src="http://cfile23.uf.tistory.com/image/126E884D502D8B0526255C"></p>
     	<p>미니스톱은 GS25나 CU에 비해 점포수가 적어 도시락또한 접하기 어려워서 선택하기 망설여졌지만
     	제법 좋은 선택이었던 것 같다. 미니스톱에서 치킨만 먹지말고 도시락도 먹어보는건 어떨까요!?</p>
+    	<h2>미니스톱 치킨</h2>
+    	<p><img src="http://cfile23.uf.tistory.com/image/126E884D502D8B0526255C"></p>
+    	<p>미니스톱의 인기메뉴 그것은 바로 치!킨! 많은 이들에게 사랑받는 메뉴다!</p>
+    	<p><img src="http://cfile26.uf.tistory.com/image/250B163C536B1A49086CB1"></p>
+    	<p>닭꼬치 부터 다리, 날개 등등 다양한 부위까지 판매하여 골라먹는 맛또한 있다.</p>
+    	<p><img src="http://tagsrc.com/%EB%AF%B8%EB%8B%88%EC%8A%A4%ED%86%B1%EC%B9%98%ED%82%A8"></p>
+    	<p>치맥은 먹고 싶지만 주머니가 가벼울때! 이렇게 한두조각에 맥주한캔도 괜찮다! 굿굿! </p>
     	
     </div>
     <h1>Heading One</h1>
