--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,18 @@
     	<p>닭꼬치 부터 다리, 날개 등등 다양한 부위까지 판매하여 골라먹는 맛또한 있다.</p>
     	<p><img src="http://cfile22.uf.tistory.com/image/1578764D4D25F84C283D13"></p>
     	<p>치맥은 먹고 싶지만 주머니가 가벼울때! 이렇게 미니스톱 치킨 한두조각에 맥주한잔 조합도 괜찮다! 굿굿! </p>
-    	
+    	<h2>전주비빔밥 참치마요 삼각김밥</h2>
+    	<p><img src="http://cfile10.uf.tistory.com/image/247C634052D0D23A20CC7F"></p>
+    	<p>편의점의 대표메뉴 삼각김밥! 그 중에서도 최고는 전주비빔밥과 참치 마요네즈!</p>
+    	<p><img src="http://cfile29.uf.tistory.com/image/217EDB4052D0D23B1F9835"></p>
+    	<p>세븐일레븐의 전주비빔 삼각김밥에는 다른 편의점 삼각김밥에는 없는 소고기가 뙇!</p>
+    	<p>삼각김밥 먹쨩 구구구구구구구 맛있쪙? 마시쪙!!!</p>
+    	<p><img src="http://cfile21.uf.tistory.com/image/26078E4052D0D23D1DF777"></p>
+    	<p>뽑기가 잘못됐는지 참치가 덩어리째 뭉쳐있다 ㅠㅠ 원래 이러지 않았는데...</p>
+    	<p>하지만 마요네즈 참치 모두 빵빵하다! 우와아아아앙ㅋ 맛있어 ㅠㅠ</p>
+    	<p><img src="http://cfile30.uf.tistory.com/image/25033D4052D0D23D1F2F19"></p>
+    	<p>세븐일레븐 전주비빔 참치마요 삼각김밥! 역시 괜히 꾸준한 사랑을 받는 메뉴에는
+    	다 이유가 있는 것 같다. 꾸준히 계속 저렴한 가격에 풍부한 내용물을 보여주길!</p>
     </div>
     <h1>Heading One</h1>
     <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
